<resources>
    <string name="app_name">List of new</string>
    <string name="NYtimes">NY Times</string>
    <string name="about_label">"About the app"</string>
    <string name="Description">"This application will help you keep up to date with the latest news from NY Times"</string>
    <string name="about_intro">Introduction at the beginning</string>
    <string name="about_update">Updating news</string>
    <string name="developerFeedback">Developer Feedback:</string>
    <string name="Send">Send Message</string>
    <string name="Hint">Enter a message…</string>
    <string name="about_email_addresses" translatable="false">Email</string>
    <string name="about_send_email_error_client">Sorry. You don\'t have any email client</string>
    <string name="about_show_error_email_message">Empty text. Please input message</string>
    <string name="about_subject">contacting about app NY Times</string>
    <string name="about_open_icon_url_error">Sorry. You don\'t have an appropriate client (web browser)</string>
    <string name="telegram_icon_url" translatable="false">https://t.me/roman_ov</string>
    <string name="github_icon_url" translatable="false">https://github.com/jrofor/ListOfNews</string>
    <string name="nytimes_logo_url" translatable="false">https://help.nytimes.com/hc/en-us/articles/115014792127-Copyright-notice</string>
    <string name="github_description">Github image</string>
    <string name="telegram_description">Telegram image</string>
    <string name="nytimes_logo_description">NY Times logo</string>

    <string name="categoryName">category Name</string>
    <string name="title" translatable="false">Text title</string>
    <string name="details_title" translatable="false">...</string>
    <string name="details_preview" translatable="false">...</string>

    <string name="NewsDetails_name" translatable="false">NewsDetails_name</string>

    <!--Strings for fragment_news_list -->
    <string name="err_data_is_empty">Please update the list of news or change your request.</string>
    <string name="btn_try_again">Try again</string>
    <string name="error_network">Network error. Please check your network connection and try again.</string>
    <string name="error_server">Server error. Probably sample token is done</string>

    <string name="top_stories_category_home">Home</string>
    <string name="top_stories_category_opinion">Opinion</string>
    <string name="top_stories_category_world">World</string>
    <string name="top_stories_category_national">National</string>
    <string name="top_stories_category_politics">Politics</string>
    <string name="top_stories_category_upshot">Upshot</string>
    <string name="top_stories_category_nyregion">NY region</string>
    <string name="top_stories_category_business">Business</string>
    <string name="top_stories_category_technology">Technology</string>
    <string name="top_stories_category_science">Science</string>
    <string name="top_stories_category_health">Health</string>
    <string name="top_stories_category_sports">Sports</string>
    <string name="top_stories_category_arts">Arts</string>
    <string name="top_stories_category_books">Books</string>
    <string name="top_stories_category_movies">Movies</string>
    <string name="top_stories_category_theater">Theater</string>
    <string name="top_stories_category_sundayreview">Sunday review</string>
    <string name="top_stories_category_fashion">Fashion</string>
    <string name="top_stories_category_tmagazine">T-magazine</string>
    <string name="top_stories_category_food">Food</string>
    <string name="top_stories_category_travel">Travel</string>
    <string name="top_stories_category_magazine">Magazine</string>
    <string name="top_stories_category_realestate">Real estate</string>
    <string name="top_stories_category_automobiles">Automobiles</string>
    <string name="top_stories_category_obituaries">Obituaries</string>
    <string name="top_stories_category_insider">Insider</string>

    <string name="error_message">Loading news was unsuccessful</string>
    <string name="action_retry">Retry</string>
    <string name="cont_descr_decoration" translatable="false">Decoration</string>

    <string name="tvWelcome">Welcome!</string>

    <!-- preference_for_IntroFragmentPagerAdapter-->
    <string name="list_of_news">List of news</string>
    <string name="details_of_the_news">Details of the news</string>
    <string name="version_for_tablets">Version on tablet</string>
    <string name="about_app">About the app</string>
    <string name="good_news">Good news…</string>

    <!-- preference_for_notification_update-->
    <string name="channel_name">Updating news</string>
    <string name="startService">Updating news</string>
    <string name="cancel_click">cancel</string>
    <string name="notiSuccessText_News_from_the">"News from the "</string>
    <string name="notiSuccessText_updated">updated</string>
    <string name="notiErrorText">Error updating</string>
    <string name="messagePeriodicUpdate">"Updates will be coming every 3 hours when device charging."</string>

</resources>

