<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/NewsDetails_name"
    android:orientation="vertical"
    tools:context=".NewsDetailsFragment">

    <ImageView
        android:id="@+id/details_image_avatar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:adjustViewBounds="true"
        android:contentDescription="@string/details_title"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/BaseMargin8"
        android:layout_weight="3"
        android:scrollbarSize="@dimen/scrollbarSize"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/BaseMargin8"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/BaseMargin4"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorDetails_textDate"
                tools:text="@tools:sample/date/ddmmyy" />

            <TextView
                android:id="@+id/details_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/BaseMargin8"
                android:text="@string/details_preview"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>